# android_instrumentation_apks

./: BUILD.bazel  README.md  WORKSPACE  app.apk  defs.bzl
ats_dummy/: BUILD
ats_dummy/tools/android/emulator/: BUILD.bazel
